# growth-dashboard

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py  main.py  models.py
backend/routes/: progress.py  stats.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  charts.js  heatmap.js  knowledge-graph.js
tests/: test_progress.py  test_stats.py
